--- a/BlueMS/src/main/res/layout-land/activity_main.xml
+++ b/BlueMS/src/main/res/layout-land/activity_main.xml
@@ -41,7 +41,7 @@
     android:id="@+id/main_content_controls"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="@android:color/darker_gray"
     android:visibility="visible">
 
     <androidx.constraintlayout.widget.Guideline
@@ -153,15 +153,15 @@
 
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="2"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
+                    android:layout_weight="2"
                     android:src="@drawable/main_flow_button" />
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="3"
                     android:layout_height="match_parent"
+                    android:layout_weight="3"
                     android:gravity="center"
                     android:text="@string/main_flowButton"
                     android:textSize="24sp" />
