--- a/BlueMS/src/main/res/layout/activity_main.xml
+++ b/BlueMS/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
     android:id="@+id/main_content_controls"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light"
+    android:background="@android:color/darker_gray"
     android:orientation="vertical"
     android:visibility="visible">
 
@@ -66,15 +66,15 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_weight="2"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_weight="2"
                 android:src="@drawable/search_button_icon_compat" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="3"
                 android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:text="@string/startScanButton"
                 android:textSize="24sp" />
@@ -102,15 +102,15 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_weight="2"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_weight="2"
                 android:src="@drawable/main_flow_button" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="3"
                 android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:text="@string/main_flowButton"
                 android:textSize="24sp" />
@@ -140,15 +140,15 @@
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_weight="2"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_weight="2"
                 android:src="@drawable/about_button_icon" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="3"
                 android:layout_height="match_parent"
+                android:layout_weight="3"
                 android:gravity="center"
                 android:text="@string/startAboutButton"
                 android:textSize="24sp" />
